2006-01-25  George Staikos <staikos@opensource.apple.com>

	Reviewed by Darin.

	* kxmlcore/HashFunctions.h: Merge build fix from KDE.

2006-01-25  Darin Adler  <darin@apple.com>

        - removed an unused source file

        * kjs/pointer_hash.h: Removed.
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj: Removed reference to pointer_hash.h.

2006-01-23  Anders Carlsson  <andersca@mac.com>

        Reviewed by Maciej.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=6737
        KJS_DEFINE_PROTOTYPE should work outside of the KJS namespace
        
        * kjs/lookup.h:
        Prefix all KJS types with KJS:: in KJS_DEFINE_PROTOTYPE.
        
        (cacheGlobalObject):
        Move this out of the KJS namespace.

2006-01-23  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Eric.

        - renamed PointerHash to PtrHash
        - made PtrHash the default hash function for int and pointer types that aren't further specialized
        - added an AtomicStringImpl class to make it easier and more typesafe to identity hash atomic strings
        - did appropriate consequent cleanup (very few places now need to declare a hash function)
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6752
        
        * kjs/array_object.cpp:
        (ArrayProtoFunc::callAsFunction): no need to mention PointerHash
        * kjs/collector.cpp: ditto
        * kjs/identifier.cpp:
        (KXMLCore::): declare DefaultHash the new way
        * kjs/internal.cpp: no need to mention PointerHash
        * kjs/ustring.h:
        * kxmlcore/HashCountedSet.h: change how we get the default hash to make it
        easier to specialize on PtrHash
        * kxmlcore/HashFunctions.h:
        (KXMLCore::): renamed PointerHash to PtrHash; changed DefaultHash so that it has
        a Hash typedef rather than being a hash function class itself; declared DefaultHash
        for int and partializy specialized for pointer types